# coding-style-checks

./: .gitignore  CMakeLists.txt  MemberOrderCheck.cpp  MemberOrderCheck.h  README.md
tests/: lit.cfg.py  readability-member-order-class.cpp  readability-member-order-fields.cpp  readability-member-order-struct.cpp
